spec/data/valid_players/player2.rb
class ValidTest2Player
  def name
  end
  
  def new_game(dictionary)
  end
  
  def take_turn(pattern)
  end
end