spec/data/invalid_players/player1.rb
class InvalidNoNameDefinedPlayer
  def new_game(dictionary)
  end
  
  def take_turn(pattern)
  end
end